# roomba_robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/walker/: walker.h
launch/: roomba.launch
results/: cppcheck  cpplint
src/: main.cpp  walker.cpp
urdf/: common_properties.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
world/: my_world.world
